# android_freetype2

./: .gitignore  README.md  build_output.txt  package_output.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/uk/co/tdpe/androidfreetype2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/uk/co/tdpe/androidfreetype2/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/uk/co/tdpe/androidfreetype2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libfreetype2/: build.gradle
libfreetype2/src/androidTest/java/uk/co/tdpe/freetype2/: ExampleInstrumentedTest.java
libfreetype2/src/main/: AndroidManifest.xml
libfreetype2/src/main/freetype2/: CMakeLists.txt
libfreetype2/src/main/freetype2/builds/unix/: config.status  freetype-config  freetype2.pc  libtool  unix-cc.mk  unix-def.mk
libfreetype2/src/test/java/uk/co/tdpe/freetype2/: ExampleUnitTest.java
